; ModuleID = '/home/carl/AnghaBench/lab/engine/code/client/extr_cl_main.c_CL_DemoFrameDurationSDev.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/client/extr_cl_main.c_CL_DemoFrameDurationSDev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, float* }

@clc = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@MAX_TIMEDEMO_DURATIONS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (float ()* @CL_DemoFrameDurationSDev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal float @CL_DemoFrameDurationSDev() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca float, align 4
  %4 = alloca float, align 4
  %5 = alloca float, align 4
  store float 0.000000e+00, float* %3, align 4
  store float 0.000000e+00, float* %4, align 4
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clc, i32 0, i32 0), align 8
  %7 = sub nsw i32 %6, 1
  %8 = load i32, i32* @MAX_TIMEDEMO_DURATIONS, align 4
  %9 = icmp sgt i32 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %0
  %11 = load i32, i32* @MAX_TIMEDEMO_DURATIONS, align 4
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %0
  %13 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clc, i32 0, i32 0), align 8
  %14 = sub nsw i32 %13, 1
  store i32 %14, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %10
  store i32 0, i32* %1, align 4
  br label %16

16:                                               ; preds = %28, %15
  %17 = load i32, i32* %1, align 4
  %18 = load i32, i32* %2, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %31

20:                                               ; preds = %16
  %21 = load float*, float** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clc, i32 0, i32 1), align 8
  %22 = load i32, i32* %1, align 4
  %23 = sext i32 %22 to i64
  %24 = getelementptr inbounds float, float* %21, i64 %23
  %25 = load float, float* %24, align 4
  %26 = load float, float* %3, align 4
  %27 = fadd float %26, %25
  store float %27, float* %3, align 4
  br label %28

28:                                               ; preds = %20
  %29 = load i32, i32* %1, align 4
  %30 = add nsw i32 %29, 1
  store i32 %30, i32* %1, align 4
  br label %16

31:                                               ; preds = %16
  %32 = load i32, i32* %2, align 4
  %33 = sitofp i32 %32 to float
  %34 = load float, float* %3, align 4
  %35 = fdiv float %34, %33
  store float %35, float* %3, align 4
  store i32 0, i32* %1, align 4
  br label %36

36:                                               ; preds = %55, %31
  %37 = load i32, i32* %1, align 4
  %38 = load i32, i32* %2, align 4
  %39 = icmp slt i32 %37, %38
  br i1 %39, label %40, label %58

40:                                               ; preds = %36
  %41 = load float*, float** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @clc, i32 0, i32 1), align 8
  %42 = load i32, i32* %1, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds float, float* %41, i64 %43
  %45 = load float, float* %44, align 4
  store float %45, float* %5, align 4
  %46 = load float, float* %5, align 4
  %47 = load float, float* %3, align 4
  %48 = fsub float %46, %47
  %49 = load float, float* %5, align 4
  %50 = load float, float* %3, align 4
  %51 = fsub float %49, %50
  %52 = fmul float %48, %51
  %53 = load float, float* %4, align 4
  %54 = fadd float %53, %52
  store float %54, float* %4, align 4
  br label %55

55:                                               ; preds = %40
  %56 = load i32, i32* %1, align 4
  %57 = add nsw i32 %56, 1
  store i32 %57, i32* %1, align 4
  br label %36

58:                                               ; preds = %36
  %59 = load i32, i32* %2, align 4
  %60 = sitofp i32 %59 to float
  %61 = load float, float* %4, align 4
  %62 = fdiv float %61, %60
  store float %62, float* %4, align 4
  %63 = load float, float* %4, align 4
  %64 = call float @sqrt(float %63)
  ret float %64
}

declare dso_local float @sqrt(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
